[gd_scene load_steps=12 format=2]

[ext_resource path="res://SpaceElements/Characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://UI/ProgressBar/SpaceProgressBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://Effects/Shield/Shield.tscn" type="PackedScene" id=3]
[ext_resource path="res://SpaceElements/Characters/Player/PlayerShip.png" type="Texture" id=4]
[ext_resource path="res://SpaceElements/Characters/Player/engine.wav" type="AudioStream" id=5]
[ext_resource path="res://SpaceElements/Characters/Player/fire.png" type="Texture" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 32.249

[sub_resource type="CircleShape2D" id=4]
radius = 72.0

[sub_resource type="RectangleShape2D" id=5]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "blink"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.588235 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )
speed = 300.0
drag = 10.0
damage_caused = 3
energy_consume = 5
limit_distance = 200
max_damage = 15
min_energy_consume = 1
max_life = 50

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fire2" type="Sprite" parent="Sprite"]
position = Vector2( 35, 220 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )

[node name="Fire1" type="Sprite" parent="Sprite"]
position = Vector2( -35, 220 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 6 )

[node name="Shield" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 0, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Weapons" type="Node2D" parent="."]

[node name="Weapon1" type="Position2D" parent="Weapons"]
position = Vector2( -6, -14 )

[node name="Weapon2" type="Position2D" parent="Weapons"]
position = Vector2( 6, -14 )

[node name="ObjectArea" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectArea"]
modulate = Color( 1, 0.0431373, 0.0431373, 1 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="EnginePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )
attenuation = 0.707107

[node name="PlayerNodes" type="Node2D" parent="."]

[node name="FleetPoints" type="Node2D" parent="PlayerNodes"]

[node name="Area2D8" type="Area2D" parent="PlayerNodes/FleetPoints"]
position = Vector2( 0, -128 )
collision_layer = 0
collision_mask = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNodes/FleetPoints/Area2D8"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D" type="Area2D" parent="PlayerNodes/FleetPoints"]
position = Vector2( -128, -128 )
collision_layer = 0
collision_mask = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNodes/FleetPoints/Area2D"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D2" type="Area2D" parent="PlayerNodes/FleetPoints"]
position = Vector2( 128, -128 )
collision_layer = 0
collision_mask = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNodes/FleetPoints/Area2D2"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D3" type="Area2D" parent="PlayerNodes/FleetPoints"]
position = Vector2( 128, 0 )
collision_layer = 0
collision_mask = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNodes/FleetPoints/Area2D3"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D4" type="Area2D" parent="PlayerNodes/FleetPoints"]
position = Vector2( 128, 128 )
collision_layer = 0
collision_mask = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNodes/FleetPoints/Area2D4"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D5" type="Area2D" parent="PlayerNodes/FleetPoints"]
position = Vector2( 0, 128 )
collision_layer = 0
collision_mask = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNodes/FleetPoints/Area2D5"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D6" type="Area2D" parent="PlayerNodes/FleetPoints"]
position = Vector2( -128, 128 )
collision_layer = 0
collision_mask = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNodes/FleetPoints/Area2D6"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Area2D7" type="Area2D" parent="PlayerNodes/FleetPoints"]
position = Vector2( -128, 0 )
collision_layer = 0
collision_mask = 51

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNodes/FleetPoints/Area2D7"]
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Life" parent="." instance=ExtResource( 2 )]
margin_top = -60.0
margin_bottom = -46.0
max_value = 10.0
value = 10.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 6 )
anims/blink = SubResource( 7 )

[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
